--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -18,7 +18,7 @@
         padding: 0.8rem 0.75rem
     }
     .nav a:hover, .nav a.is-active {
-        background: rgba(255, 255, 255, .15);
+        background: rgba(255, 255, 255, .35);
         border-radius: 6px
     }
 }
